[package]
name = "rust_ml"
version = "0.1.0"
authors = ["Richard Dodd <richard.o.dodd@gmail.com>"]
edition = "2018"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1.0.54", features = ["full", "extra-traits"] }
quote = "1.0.7"
itertools = "0.9.0"
proc-macro2 = "1.0.24"

[workspace]
members = [
    ".",
    "example"
]
